# pheragent

./: .gitignore  README.md  pyproject.toml
docs/: ablation-development-plan.md  agent-loop-optimization.md  setupbench-failure-triage.md  trajectories.md
scripts/: enrich_block_validation_ci_matches.py  run_executionagent.py  run_repo2run.py  run_setupbench.py  run_setupbench.sh  summarize_executionagent_validation.py
statistic/: README.md  all_trajectory_runs.csv  apache_cassandra_rollback_timeline.md  apache_cassandra_runtime_block_transitions.csv  by_directory_summary.csv  duplicate_case_counts.csv  final_heragent_failure_analysis.md  final_heragent_failure_by_block.csv  final_heragent_failure_by_category.csv  final_heragent_failure_by_directory.csv  final_heragent_failure_by_run.csv  final_heragent_failure_collapsed_categories.csv  final_heragent_failure_collapsed_category_examples.csv  missing_manifest_runs.csv  non_adjacent_rollback_combined_summary.csv  non_adjacent_rollback_master.csv  non_adjacent_rollback_master_runs.csv  non_adjacent_rollback_records_combined.csv  non_adjacent_rollback_records_combined.md  non_adjacent_rollback_runs_combined.csv  not_one_shot_cases.csv  project_attempt_not_one_shot_cases.csv  project_attempt_not_one_shot_cases.json  rollback_analysis.md  rollback_analysis_by_case.csv  rollback_analysis_summary.csv  rollback_no_prior_block_cases.csv  rollback_non_adjacent_block_flow.csv  rollback_non_adjacent_block_segments.csv  rollback_non_adjacent_case_chronology.md  rollback_non_adjacent_case_chronology_summary.csv  (+15 more)
tests/: test_cli.py  (+13 more)
(+111 files in other folders)
