[project]
name = "pheragent"
version = "0.1.0"
description = "Command-driven, checkpointed Docker environment builder agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "openai>=2.0",
  "pydantic==2.12.0",
]

[project.scripts]
pheragent = "pheragent.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4",
  "ruff>=0.12",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pheragent"]

[tool.ruff]
line-length = 100
target-version = "py314"
extend-exclude = ["projects"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PT"]

[tool.pytest.ini_options]
testpaths = ["tests"]
